--- a/index.html
+++ b/index.html
@@ -18,7 +18,40 @@
         <a href="">PRODUCTS</a>
     </div>
    </header>
-    <div></div>
+    <div class="mid">
+        <div class="top">
+            <h1>Products</h1>
+            <div>
+                <a href="">HOME</a>
+                <p>-></p>
+                <a href="">PRODUCTS</a>
+            </div>
+        </div>
+        <div class="bottom">
+            <h1>Featured Robotics Products to Show</h1>
+            <p>Who are in extremely love width eco friendly system</p>
+            <div class="blocks">
+                <div>
+                    <img src="img/robot.png" alt="">
+                    <h2>The Upper Eye</h2>
+                    <p>Who are in extremely love width eco friendly system</p>
+                    <button>View Details</button>
+                </div>
+                <div>
+                    <img src="img/robot.png" alt="">
+                    <h2>The Upper Eye</h2>
+                    <p>Who are in extremely love width eco friendly system</p>
+                    <button>View Details</button>
+                </div>
+                <div>
+                    <img src="img/robot.png" alt="">
+                    <h2>The Upper Eye</h2>
+                    <p>Who are in extremely love width eco friendly system</p>
+                    <button>View Details</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer></footer>
 </body>
 </html>
